# amplifier-bundle-gitea

./: .gitignore  AGENTS.md  README.md  bundle.md  pyproject.toml
.amplifier/digital-twin-universe/profiles/: gitea-self-validation.yaml
behaviors/: gitea.yaml
context/: gitea-awareness.md
docs/: amplifier-gitea-architecture.dot  api_reference.md  development.md
skills/gitea/: SKILL.md
src/amplifier_bundle_gitea/: __init__.py  cli.py  constants.py  create.py  docker_ops.py  gitea_api.py  github_api.py  github_sync.py
tests/: conftest.py  helpers.py  test_cli_basics.py  test_e2e_mirror_metadata.py  test_git_operations.py  test_github_sync.py  test_lifecycle.py
