[project]
name = "amplifier-bundle-gitea"
version = "0.1.0"
description = "On-demand ephemeral Gitea instances for isolated git workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft MADE:Explorations Team" }]
keywords = ["amplifier", "gitea", "git", "ephemeral", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.3,<9.0",
    "docker>=7.1,<8.0",
    "httpx>=0.28,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff",
    "pyright",
]

[project.scripts]
amplifier-gitea = "amplifier_bundle_gitea.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_bundle_gitea"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "integration: tests that require Docker (deselected by default, use --run-integration)",
    "github: tests that require GitHub access (deselected by default, use --run-github --github-test-repo)",
]